fix: adjust workspace styles for improved layout and readability

--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -52,7 +52,7 @@ window#waybar.hidden {
 }
 
 #workspaces * {
-	font-size: 12px;
+	font-size: 13px;
 }
 #workspaces button label {
 	color: @lavender;
@@ -76,10 +76,10 @@ window#waybar.hidden {
 
 #workspaces {
 	background-color: alpha(@base, 0.9);
-	border: 2px solid @border;
-	padding: 0 10px;
-	margin: 2px 4px 5px 4px;
-	box-shadow: 3px 3px 1px 1px alpha(@shadow, 0.7);
+	border: 1px solid @border;
+	padding: 0 5px;
+	margin: 2px 2px 5px 0px;
+	box-shadow: 2px 3px 1px 1px alpha(@shadow, 0.7);
 	border-radius: 10px;
 	background-clip: padding-box;
 }
@@ -97,12 +97,12 @@ window#waybar.hidden {
 }
 
 #workspaces button.active {
-	padding-right: 6px;
-	padding-left: 6px;
+	padding-right: 5px;
+	padding-left: 5px;
 	box-shadow: 3px 3px 1px 1px alpha(@shadow, 0.7);
-	padding-bottom: 3px;
-	margin-top: 3px;
-	margin-bottom: 5px;
+	padding-bottom: 0px;
+	margin-top: 4px;
+	margin-bottom: 4px;
 	background: linear-gradient(
 		52deg,
 		rgba(139, 213, 202, 1) 0%,
